Fixed logo dark mode issue and imported cordita local font

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,28 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@font-face {
+  font-family: "Gordita";
+  src: url(Assets/gordita-cufonfonts/Gordita\ Black.otf),
+    url(Assets/gordita-cufonfonts/Gordita\ Black\ Italic.otf),
+    url(Assets/gordita-cufonfonts/Gordita\ Bold.otf),
+    url(Assets/gordita-cufonfonts/Gordita\ Bold\ Italic.otf),
+    url(Assets/gordita-cufonfonts/Gordita\ Light.otf),
+    url(Assets/gordita-cufonfonts/Gordita\ Light\ Italic.otf),
+    url(Assets/gordita-cufonfonts/Gordita\ Medium.otf),
+    url(Assets/gordita-cufonfonts/Gordita\ Medium\ Italic.otf),
+    url(Assets/gordita-cufonfonts/Gordita\ Regular.otf),
+    url(Assets/gordita-cufonfonts/Gordita\ Regular\ Italic.otf),
+    url(Assets/gordita-cufonfonts/Gordita\ Thin.otf),
+    url(Assets/gordita-cufonfonts/Gordita\ Thin\ Italic.otf),
+    url(Assets/gordita-cufonfonts/Gordita\ Ultra.otf),
+    url(Assets/gordita-cufonfonts/Gordita\ Ultra\ Italic.otf);
+  font-weight: normal;
+  font-style: normal;
+}
+.gordita {
+  font-family: "Gordita", sans-serif;
+}
 
 body {
   margin: 0;
@@ -35,4 +57,12 @@ code {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.light-fill {
+  fill: #1b212d;
+}
+
+.dark-fill {
+  fill: white;
 }
